Backend/Project/JIGYAZA/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend-deployment
  labels:
    name:  backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jigyaza
  template:
    metadata:
      labels:
        app: jigyaza
    spec:
      containers:
      - image:  jigyaza
        imagePullPolicy: IfNotPresent
        name:  backend-container
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  backend-port
