Backend/Project/JIGYAZA/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jigyaza-ingress
  labels:
    app.kubernetes.io/name: jigyaza-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port: 
              number: 80
